--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite --port 5173",
-    "build": "vite build",
+    "build": "echo 'Build disabled - using static files'",
     "preview": "vite preview",
     "start": "vite preview --port 4173",
     "check": "tsc",
