--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "framework": "vite",
+  "functions": {
+    "client/src/**/*.{js,ts,jsx,tsx}": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "buildCommand": "echo 'Skipping build - using pre-built files'",
+  "outputDirectory": ".",
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
     {
       "source": "/(.*)",
