🔧 Fix Pages + mock API per test locali\n\n- Vite base '/ciclo-del-carbonio/' per GitHub Pages\n- Workflow GitHub Actions per deploy automatico\n- Mock server Express per endpoint /api/quiz/* (risolve curl exit code 7)\n- Scripts npm: mock:api, serve:dist\n- Copiati 404.html e index fallback in dist

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "vite preview --port 4173",
+    "mock:api": "ts-node server/mock-api.ts",
+    "serve:dist": "vite preview --port 4173 --strictPort",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
