ci: fix build-and-deploy
- Aggiunti permessi contents: write per gh-pages
- Aggiornate env VITE_* per nomi tabelle Airtable
- Configurata identity github-actions per publish gh-pages
- Concurrency per evitare run sovrapposti

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,6 +5,13 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
+concurrency:
+  group: gh-pages-deploy
+  cancel-in-progress: true
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -28,7 +35,9 @@ jobs:
         env:
           VITE_AIRTABLE_API_KEY: ${{ secrets.VITE_AIRTABLE_API_KEY }}
           VITE_AIRTABLE_BASE_ID: ${{ secrets.VITE_AIRTABLE_BASE_ID }}
-          VITE_AIRTABLE_TABLE_NAME: ${{ secrets.VITE_AIRTABLE_TABLE_NAME }}
+          VITE_AIRTABLE_SESSIONS_TABLE: ${{ secrets.VITE_AIRTABLE_SESSIONS_TABLE }}
+          VITE_AIRTABLE_STUDENTS_TABLE: ${{ secrets.VITE_AIRTABLE_STUDENTS_TABLE }}
+          VITE_AIRTABLE_ANSWERS_TABLE: ${{ secrets.VITE_AIRTABLE_ANSWERS_TABLE }}
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
@@ -37,3 +46,5 @@ jobs:
           publish_dir: ./dist
           force_orphan: true
           publish_branch: gh-pages
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
