--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
 # Airtable Configuration
 VITE_AIRTABLE_API_KEY=your_airtable_api_key_here
 VITE_AIRTABLE_BASE_ID=your_airtable_base_id_here
-VITE_AIRTABLE_TABLE_NAME=QuizSessions
+
+# Preferibile usare le 3 variabili sottostanti
+VITE_AIRTABLE_SESSIONS_TABLE=Sessions
+VITE_AIRTABLE_STUDENTS_TABLE=Students
+VITE_AIRTABLE_ANSWERS_TABLE=Answers
+
+# Retrocompat (opzionale): alias per la tabella Sessions
+# Se presente, VITE_AIRTABLE_TABLE_NAME verrà usata come nome della tabella Sessions
+VITE_AIRTABLE_TABLE_NAME=Sessions
 
 # GitHub Pages Configuration  
 VITE_DEPLOYMENT_URL=https://your-username.github.io/your-repo-name
