--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,8 @@ jobs:
         env:
           VITE_AIRTABLE_API_KEY: ${{ secrets.VITE_AIRTABLE_API_KEY }}
           VITE_AIRTABLE_BASE_ID: ${{ secrets.VITE_AIRTABLE_BASE_ID }}
+          # Preferibile usare le 3 variabili sottostanti; TABLE_NAME è alias legacy per Sessions
+          VITE_AIRTABLE_TABLE_NAME: ${{ secrets.VITE_AIRTABLE_TABLE_NAME }}
           VITE_AIRTABLE_SESSIONS_TABLE: ${{ secrets.VITE_AIRTABLE_SESSIONS_TABLE }}
           VITE_AIRTABLE_STUDENTS_TABLE: ${{ secrets.VITE_AIRTABLE_STUDENTS_TABLE }}
           VITE_AIRTABLE_ANSWERS_TABLE: ${{ secrets.VITE_AIRTABLE_ANSWERS_TABLE }}
