feat(airtable): auto-fallback su 401/403 e flag VITE_AIRTABLE_FORCE_DISABLED

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,8 @@ VITE_AIRTABLE_ANSWERS_TABLE=Answers
 # Se presente, VITE_AIRTABLE_TABLE_NAME verrà usata come nome della tabella Sessions
 VITE_AIRTABLE_TABLE_NAME=Sessions
 
+# Forza il fallback locale disabilitando Airtable (true/false o 1/0)
+VITE_AIRTABLE_FORCE_DISABLED=false
+
 # GitHub Pages Configuration  
 VITE_DEPLOYMENT_URL=https://your-username.github.io/your-repo-name
