feat(airtable): supporto proxy serverless su Vercel (VITE_AIRTABLE_PROXY_URL)\n- funzione /api/airtable per inoltrare richieste senza esporre PAT\n- client usa proxy se definito, no Authorization sul browser\n- vercel.json: rewrites per API e SPA

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,8 @@
 {
-  "functions": {
-    "client/src/**/*.{js,ts,jsx,tsx}": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "buildCommand": "echo 'Skipping build - using pre-built files'",
-  "outputDirectory": ".",
   "cleanUrls": true,
   "trailingSlash": false,
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/api/airtable/(.*)", "destination": "/api/airtable/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
